@@ -1,3 +1,14 @@
+2012-04-01  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/50043
+	* class.c (deduce_noexcept_on_destructor,
+	deduce_noexcept_on_destructors): New.
+	(check_bases_and_members): Call the latter.
+	* decl.c (grokfndecl): Call the former.
+	* method.c (implicitly_declare_fn): Not static.
+	* cp-tree.h (deduce_noexcept_on_destructor, implicitly_declare_fn):
+	Declare
+
 2012-03-29  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/52718
